added filters: css include, lessphp

--- a/src/Pv/StaticsBundle/Resources/config/services.yml
+++ b/src/Pv/StaticsBundle/Resources/config/services.yml
@@ -36,3 +36,10 @@ services:
         class: Pv\StaticsBundle\Loader\Loader
         arguments:
             - @kernel
+
+    statics.filters.css_include:
+        class: Pv\StaticsBundle\Filter\CssIncludeFilter
+        arguments:
+            - @statics.manager
+    statics.filters.lessphp:
+        class: Pv\StaticsBundle\Filter\LessphpFilter
