added url helper and made using new way of loading assets

--- a/src/Pv/StaticsBundle/Resources/config/services.yml
+++ b/src/Pv/StaticsBundle/Resources/config/services.yml
@@ -37,6 +37,11 @@ services:
         arguments:
             - @kernel
 
+    statics.url_helper:
+        class: Pv\StaticsBundle\UrlHelper
+        arguments:
+            - @service_container
+
     statics.filters.css_include:
         class: Pv\StaticsBundle\Filter\CssIncludeFilter
         arguments:
