--- a/src/Pv/StaticsBundle/Resources/config/services.yml
+++ b/src/Pv/StaticsBundle/Resources/config/services.yml
@@ -3,6 +3,7 @@ parameters:
     pv_statics.manager.class:        Pv\StaticsBundle\StaticsManager
     pv_statics.cache.class:          Pv\StaticsBundle\Cache\FilesystemCache
     pv_statics.twig_extension.class: Pv\StaticsBundle\Twig\StaticsExtension
+    statics.closure_compiler.jar:    %kernel.root_dir%/../bin/closure-compiler-20130411.jar
 
 services:
     statics.manager:
@@ -52,3 +53,7 @@ services:
             - @statics.manager
     statics.filters.lessphp:
         class: Pv\StaticsBundle\Filter\LessphpFilter
+    statics.filters.closure_compiler:
+        class: Pv\StaticsBundle\Filter\ClosureCompilerFilter
+        arguments:
+            - %statics.closure_compiler.jar%
