use node less instead of lessphp

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "pv/statics-bundle",
     "require": {
         "symfony/symfony": "~2.1",
-        "leafo/lessphp": "~0.3"
+        "symfony/process": "2.4~",
+        "leafo/lessphp": "~0.4"
     },
     "autoload": {
         "psr-0": { "": "src/" }
