use request listener instead of controller for dev

--- a/src/Pv/StaticsBundle/Resources/config/routing_dev.yml
+++ b/src/Pv/StaticsBundle/Resources/config/routing_dev.yml
@@ -1,4 +1,1 @@
-_statics:
-    pattern: /s/{path}
-    defaults: { _controller: PvStaticsBundle:Dev:render }
-    requirements: { path: ".+" }
+# Deprecated
