--- a/src/Pv/StaticsBundle/Resources/config/services.yml
+++ b/src/Pv/StaticsBundle/Resources/config/services.yml
@@ -31,6 +31,7 @@ services:
         class: Pv\StaticsBundle\Loader\Loader
         arguments:
             - @kernel
+            - @statics.manager
 
     statics.url_helper:
         class: Pv\StaticsBundle\UrlHelper
